<ui version="4.0" >
 <class>AddGeoRSSLayerWidget</class>
 <widget class="QWidget" name="AddGeoRSSLayerWidget" >
  <property name="geometry" >
   <rect>
    <x>0</x>
    <y>0</y>
    <width>525</width>
    <height>511</height>
   </rect>
  </property>
  <property name="windowTitle" >
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_2" >
   <item>
    <layout class="QHBoxLayout" >
     <item>
      <widget class="QLabel" name="_url" >
       <property name="text" >
        <string>Url:</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLineEdit" name="_urlEdit" />
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" >
     <item>
      <widget class="QLabel" name="label" >
       <property name="text" >
        <string>Refresh Rate in seconds:</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QDoubleSpinBox" name="_refreshRate" >
       <property name="maximum" >
        <double>10000000.000000000000000</double>
       </property>
       <property name="value" >
        <double>300.000000000000000</double>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" >
     <item>
      <widget class="QLabel" name="label_4" >
       <property name="text" >
        <string>Color:</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QtTools::ColorButton" name="_colorButton" >
       <property name="text" >
        <string>PushButton</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" >
     <item>
      <widget class="QLabel" name="label_5" >
       <property name="text" >
        <string>Maximum Items:</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QSpinBox" name="_maximumItemsSpinBox" />
     </item>
    </layout>
   </item>
   <item>
    <layout class="QHBoxLayout" name="horizontalLayout" >
     <item>
      <widget class="QLabel" name="label_6" >
       <property name="text" >
        <string>Don't show item older than:</string>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QDoubleSpinBox" name="_maximumItemAge" >
       <property name="maximum" >
        <double>999999999.000000000000000</double>
       </property>
       <property name="value" >
        <double>365.000000000000000</double>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QLabel" name="label_7" >
       <property name="text" >
        <string>days</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QGroupBox" name="groupBox" >
     <property name="title" >
      <string>Filtering</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout" >
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2" >
        <item>
         <widget class="QCheckBox" name="_enableFiltering" >
          <property name="text" >
           <string>Filiter Results</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="_useRegEx" >
          <property name="text" >
           <string>Use Regular Expression</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" >
        <item>
         <widget class="QLabel" name="label_2" >
          <property name="text" >
           <string>Element</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLineEdit" name="_elementFilter" />
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" >
        <item>
         <widget class="QLabel" name="label_3" >
          <property name="text" >
           <string>Contains text:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLineEdit" name="_valueFilter" />
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <spacer>
     <property name="orientation" >
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0" >
      <size>
       <width>20</width>
       <height>40</height>
      </size>
     </property>
    </spacer>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>QtTools::ColorButton</class>
   <extends>QPushButton</extends>
   <header>QtTools/ColorButton.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
